# ToastyReplay

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  about.md  fix_generated_source.cmake  fix_pch.cmake  fix_standalones.cmake  fmod_fix_header.h  mod.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci-pinned-sdk.yml  multi-platform.yml
bindings/scripts/ghidra/: Broma.java  CConv.java  DumpVirtuals.java  PaddingInfo.java  Platform.java  Regexes.java  ScriptWrapper.java  Signature.java  SyncBromaScript.java
bindings/test/members/: CMakeLists.txt
resources/lang/: en.json  es.json  fr.json  vi.json  zh.json
src/: ToastyReplay.hpp  cbf_integration.cpp  checkpoint_handler.hpp  checkpoint_manager.cpp.disabled  checkpoint_system.cpp  clickbetweenframescompat.cpp  gui.cpp  gui.hpp  hitboxes.cpp  hooks.cpp  imgui-cocos.hpp  input_recovery.cpp.disabled  keybinds.cpp  physicsbypass.cpp  playbackmanager.cpp  player_state.cpp.disabled  playerhooks.cpp  playerlayer.cpp  playsound.cpp  practicemode.cpp  recordmanager.cpp  replay.hpp  replay_engine.cpp  safemode.cpp  speedhackaudio.cpp  trajectory.cpp  trajectory.hpp  ttr_format.cpp  ttr_format.hpp  utils.hpp  watermark.cpp
src/audio/: click_audio_math.hpp  clicksounds.cpp  clicksounds.hpp  playsound.cpp
src/conversion/: gdr_upgrade.cpp  gdr_upgrade.hpp  macro_converter.cpp  macro_converter.hpp  replay_import.hpp  tcbot_format.cpp  tcbot_format.hpp  tcbot_import.cpp  tcbot_import.hpp
src/core/: accuracy_mode.hpp  cbf_integration.cpp  cbf_integration.hpp  checkpoint_handler.cpp  checkpoint_handler.hpp  checkpoint_system.cpp  frame_stepper.cpp  gameplay_layer.hpp  input_timing.cpp  input_timing.hpp  keybinds.cpp  noclip_accuracy.hpp  replay_engine.cpp  replay_timing.hpp  start_position_policy.hpp
src/editor/: editor_playtest.cpp
src/format/: replay.hpp  ttr3_format.cpp  ttr3_format.hpp  ttr_format.cpp  ttr_format.hpp
src/geode.custom-keybinds/include/: Keybinds.hpp
src/gui/: credits_popup.cpp  credits_popup.hpp  frame_editor.cpp  frame_editor.hpp  frame_editor_commit_model.hpp  gui.cpp  gui.hpp  pride_mode.hpp
src/gui/cocos/: frontend.cpp  frontend.hpp  localized_label.cpp  localized_label.hpp  mobile_float.cpp  moving_background.hpp  tr_frame_editor_popup.cpp  tr_frame_editor_popup.hpp  tr_menu_popup.cpp  tr_menu_popup.hpp  tr_replay_actions_popup.cpp  tr_replay_actions_popup.hpp
src/gui/cocos/cells/: cells.cpp  cells.hpp
src/hacks/: autoclicker.cpp  autoclicker.hpp  hitbox_overlay_model.hpp  hitboxes.cpp  physicsbypass.cpp  physicsbypass.hpp  safemode.cpp  show_trajectory.cpp  show_trajectory.hpp  trajectory.cpp  trajectory.hpp
src/i18n/: localization.cpp  localization.hpp
src/lang/: localization.cpp  localization.hpp
src/online/: online_client.cpp  online_client.hpp
src/render/: ffmpeg_events.hpp  render_config.cpp  render_config.hpp  render_preset.cpp  render_preset.hpp  renderer.cpp  renderer.hpp  subprocess.hpp  watermark.cpp  watermark_bridge.hpp  watermark_dll_loader.cpp  watermark_dll_loader.hpp  watermark_hash_embedded.hpp
src/tools/: disableshaders.cpp  layoutmode.cpp  nomirror.cpp  speedhackaudio.cpp  visual_suppression.cpp
src/trajectory/: trajectory.cpp  trajectory.hpp  trajectory_physics.cpp  trajectory_physics.hpp
tests/: gdr_import_tests.cpp  tcbot_format_tests.cpp  vanilla_conversion_tests.cpp
